--- a/version.css
+++ b/version.css
@@ -1,3 +1,3 @@
 :root {
-  --available-version: 118 !important;
+  --available-version: 119 !important;
 }
